--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ networks:
       driver: default
       config:
         - subnet: 192.168.100.0/24
-          # gateway: 192.168.100.1
+          gateway: 192.168.100.1
 services:
   nextcloud:
     image: linuxserver/nextcloud
