--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,10 @@ services:
   inventory-hunter:
     network_mode: host
     container_name: inventory-hunter
+    environment: 
+      - "ScalperWebhook=${ScalperWebhook}"
     image: ericjmarti/inventory-hunter:latest
-    command: --alerter=slack --webhook=https://hooks.slack.com/services/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
+    command: --alerter=slack --webhook=$ScalperWebhook
     volumes:
       - /mnt/storage/appdata/inventory-hunter/3070.yaml:/config.yaml
       - /mnt/storage/appdata/inventory-hunter/data/:/data
