--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,9 +27,11 @@ services:
     image: ericjmarti/inventory-hunter:latest
     command: --alerter=slack --webhook=$ScalperWebhook
     volumes:
-      - /mnt/storage/appdata/inventory-hunter/3070.yaml:/config.yaml
       - /mnt/storage/appdata/inventory-hunter/data:/data
       - /mnt/storage/appdata/inventory-hunter/log:/log
+      - type: bind
+        source: /mnt/storage/appdata/inventory-hunter/3070.yaml
+        target: /config.yaml
     restart: unless-stopped 
   nextcloud:
     image: linuxserver/nextcloud
