moving the volume mount

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,9 +29,7 @@ services:
     volumes:
       - /mnt/storage/appdata/inventory-hunter/data:/data
       - /mnt/storage/appdata/inventory-hunter/log:/log
-      # - type: bind
-      #   source: /mnt/storage/appdata/inventory-hunter/3070.yaml
-      #   target: /config.yaml
+      - /mnt/storage/appdata/inventory-hunter/3070.yaml:/config.yaml
     restart: unless-stopped 
   nextcloud:
     image: linuxserver/nextcloud
