--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     image: solidnerd/avahi:0.7
     network_mode: host
     volumes:
-     - /mnt/storage/appdata/avahi/:/etc/avahi:ro
+     - /mnt/storage/appdata/avahi/:/etc/avahi
     environment:
       - TZ=America/Chicago
       - "PUID=${PUID}"
