--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,7 +73,7 @@ services:
     network_mode: host
     container_name: inventory-hunter
     image: ericjmarti/inventory-hunter:latest
-    command: -q=alerters.yaml
+    command: ['-q alerters.yaml']
     volumes:
       - /mnt/storage/appdata/inventory-hunter/data:/data
       - /mnt/storage/appdata/inventory-hunter/log:/log
