--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,37 @@ networks:
       config:
         - subnet: 192.168.100.0/24
 services:
+  prometheus:
+    environment:
+      - "PUID=${PUID}"
+      - "PGID=${PGID}"
+      - "TZ=${TZ}"
+      - UMASK_SET=022
+    image: prom/prometheus:v2.21.0
+    ports:
+      - 9090:9090
+    volumes:
+      - /mnt/storage/appdata/prometheus/etc:/etc/prometheus
+      - /mnt/storage/appdata/prometheus/data:/prometheus
+    command: --web.enable-lifecycle  --config.file=/etc/prometheus/prometheus.yml
+    restart: unless-stopped
+    labels: 
+      - traefik.enable=true
+      - traefik.backend=prometheus
+      - "traefik.frontend.rule=Host:prometheus.${DOMAINNAME}"
+      - traefik.port=9090
+      - traefik.docker.network=traefik_proxy
+      - traefik.frontend.headers.SSLRedirect=true
+      - traefik.frontend.headers.STSSeconds=315360000
+      - traefik.frontend.headers.browserXSSFilter=true
+      - traefik.frontend.headers.contentTypeNosniff=true
+      - traefik.frontend.headers.forceSTSHeader=true
+      - traefik.frontend.headers.SSLHost=frost.haus
+      - traefik.frontend.headers.STSIncludeSubdomains=true
+      - traefik.frontend.headers.STSPreload=true
+      - traefik.frontend.headers.frameDeny=false
+    networks: 
+      - traefik_proxy
   samba:
     container_name: WinShare
     hostname: samba
