--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,19 +25,27 @@ services:
       - "TZ=${TZ}"
       - UMASK_SET=022
     image: prom/prometheus:v2.21.0
-    ports:
-      - 9090:9090
     volumes:
       - /mnt/storage/appdata/prometheus/etc:/etc/prometheus
       - /mnt/storage/appdata/prometheus/data:/prometheus
     command: --web.enable-lifecycle  --config.file=/etc/prometheus/prometheus.yml
-    # Command allows config reload with "curl -X POST http://localhost:9000/-/reload"
+    # Command allows config reload with "curl -X POST http://localhost:9090/-/reload"
     restart: unless-stopped
     labels: 
       - traefik.enable=true
       - traefik.backend=prometheus
       - "traefik.frontend.rule=Host:prometheus.${DOMAINNAME}"
       - traefik.port=9090
+      - traefik.docker.network=traefik_proxy
+      - traefik.frontend.headers.SSLRedirect=true
+      - traefik.frontend.headers.STSSeconds=315360000
+      - traefik.frontend.headers.browserXSSFilter=true
+      - traefik.frontend.headers.contentTypeNosniff=true
+      - traefik.frontend.headers.forceSTSHeader=true
+      - traefik.frontend.headers.SSLHost=frost.haus
+      - traefik.frontend.headers.STSIncludeSubdomains=true
+      - traefik.frontend.headers.STSPreload=true
+      - traefik.frontend.headers.frameDeny=false
   apprise-api:
     image: ghcr.io/linuxserver/apprise-api
     container_name: apprise-api
