--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -136,9 +136,9 @@ services:
       - DOCKER_MODS=linuxserver/mods:universal-cron
     restart: unless-stopped
     volumes:
-      - /mnt/storage/appdata/nzbhydra2/cronfig:/config
+      - /mnt/storage/appdata/nzbhydra2/config:/config
       - /mnt/storage/appdata/nzbhydra2/downloads:/downloads
-      - /mnt/storage/appdata/healthcheck:/config/contabs
+      - /mnt/storage/appdata/healthcheck:/config/crontabs
     labels: 
       - traefik.enable=true
       - traefik.backend=nzbhydra2
