--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,33 +18,6 @@ networks:
       config:
         - subnet: 192.168.100.0/24
 services:
-  apprise-api:
-    image: ghcr.io/linuxserver/apprise-api
-    container_name: apprise-api
-    environment:
-      - TZ=America/Chicago
-      - "PUID=${PUID}"
-      - "PGID=${PGID}"    
-    volumes:
-     - /mnt/storage/appdata/apprise/:/config
-    restart: unless-stopped
-    labels: 
-      - traefik.enable=true
-      - traefik.backend=apprise
-      - "traefik.frontend.rule=Host:apprise.${DOMAINNAME}"
-      - traefik.port=8000
-      - traefik.docker.network=traefik_proxy
-      - traefik.frontend.headers.SSLRedirect=true
-      - traefik.frontend.headers.STSSeconds=315360000
-      - traefik.frontend.headers.browserXSSFilter=true
-      - traefik.frontend.headers.contentTypeNosniff=true
-      - traefik.frontend.headers.forceSTSHeader=true
-      - traefik.frontend.headers.SSLHost=frost.haus
-      - traefik.frontend.headers.STSIncludeSubdomains=true
-      - traefik.frontend.headers.STSPreload=true
-      - traefik.frontend.headers.frameDeny=false
-    networks: 
-      - traefik_proxy
   samba:
     container_name: WinShare
     hostname: samba
@@ -308,7 +281,7 @@ services:
   radarr: 
     container_name: radarr
     environment: 
-      - DOCKER_MODS=linuxserver/mods:universal-apprise|linuxserver/mods:universal-cron
+      - DOCKER_MODS=linuxserver/mods:universal-cron
       - "TZ=${TZ}"
       - "PUID=${PUID}"
       - "PGID=${PGID}"
@@ -377,7 +350,6 @@ services:
   sonarr: 
     container_name: sonarr
     environment: 
-      - DOCKER_MODS=linuxserver/mods:universal-apprise
       - TZ=America/Chicago
       - "PUID=${PUID}"
       - "PGID=${PGID}"
