--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,10 +43,10 @@ services:
       - "PGID=${PGID}"    
     restart: always
   inventory-hunter:
-    network_mode: host
+    # network_mode: host
     container_name: inventory-hunter
     image: ericjmarti/inventory-hunter:latest
-    command: -c config.yaml -a slack -w ${IHSLACK}
+    command: "-c config.yaml -a slack -w ${IHSLACK}"
     volumes:
       - /mnt/storage/appdata/inventory-hunter/data:/data
       - /mnt/storage/appdata/inventory-hunter/log:/log
