--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -197,6 +197,32 @@ services:
     restart: always
     volumes: 
       - "/mnt/storage/appdata/organizr:/config"
+  kavita:
+    container_name: kavita
+    environment: 
+      - "PUID=${PUID}"
+      - "PGID=${PGID}"
+      - "TZ=${TZ}"
+    image: kizaing/kavita:latest
+    volumes:
+      - "/mnt/storage/appdata/kavita:/kavita/data"
+      - "/mnt/storage/media/comics:/manga"
+    restart: unless-stopped
+    labels: 
+      - traefik.enable=true
+      - traefik.backend=kavita
+      - "traefik.frontend.rule=Host:${DOMAINNAME}"
+      - traefik.port=5000
+      - traefik.docker.network=traefik_proxy
+      - traefik.frontend.headers.SSLRedirect=true
+      - traefik.frontend.headers.STSSeconds=315360000
+      - traefik.frontend.headers.browserXSSFilter=true
+      - traefik.frontend.headers.contentTypeNosniff=true
+      - traefik.frontend.headers.forceSTSHeader=true
+      - traefik.frontend.headers.SSLHost=frost.haus
+      - traefik.frontend.headers.STSIncludeSubdomains=true
+      - traefik.frontend.headers.STSPreload=true
+      - traefik.frontend.headers.frameDeny=false
   ouroboros: 
     container_name: ouroboros
     environment: 
