--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -210,8 +210,8 @@ services:
     restart: unless-stopped
     labels: 
       - traefik.enable=true
-      - traefik.backend=kavita
-      - "traefik.frontend.rule=Host:${DOMAINNAME}"
+      - traefik.backend=radarr
+      - "traefik.frontend.rule=Host:kavita.${DOMAINNAME}"
       - traefik.port=5000
       - traefik.docker.network=traefik_proxy
       - traefik.frontend.headers.SSLRedirect=true
