--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -615,11 +615,11 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /mnt/storage/appdata/frigate/frigate.yml:/config/config.yml:ro
-      - /mnt/storage/media/frigate/:/media/frigate
-      - type: tmpfs # Optional: 1GB of memory, reduces SSD/SD Card wear
-        target: /tmp/cache
-        tmpfs:
-          size: 1000000000
+      - /mnt/storage/media/frigate/:/media/frigate/
+      # - type: tmpfs # Optional: 1GB of memory, reduces SSD/SD Card wear
+      #   target: /tmp/cache
+      #   tmpfs:
+      #     size: 1000000000
     ports:
       - "5000:5000"
       - "1935:1935" # RTMP feeds
