--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -147,6 +147,7 @@ services:
         - 8554:8554
         - 8888:8888
     environment:
+        - QUALITY=HD60
         - LAN_ONLY=True
         - WYZE_EMAIL=${WYZE_EMAIL}
         - WYZE_PASSWORD=${WYZE_PASSWORD}
